tests/sources/invalid/imports/export_visibility_private.fire
// Private module symbol should not be importable.

import @firescript/std.io.println;
import visibility_provider.hiddenValue;

println(hiddenValue);